--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "server",
   "version": "1.0.0",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js --ignore client"
-  },
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -20,5 +16,16 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "validator": "^12.2.0"
-  }
+  },
+  "scripts": {
+    "client-install": "npm install --prefix client",
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+  }, 
+  "engines": {
+    "node": "10.16.1"
+}
 }
