--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "engines": {
+    "node": "10.16.1",
+    "yarn": "1.19.1"
+},
   "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd client && yarn run build",
+    "install-client": "cd client && yarn install",
+    "heroku-postbuild": "yarn run install-client && yarn run build",
+    "start": "node server.js"
+  },
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -16,16 +27,5 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "validator": "^12.2.0"
-  },
-  "scripts": {
-    "client-install": "yarn install --prefix client",
-    "start": "node server.js",
-    "server": "nodemon server.js",
-    "client": "yarn start --prefix client",
-    "dev": "concurrently \"yarn run server\" \"yarn run client\"",
-    "heroku-postbuild": "cd client && yarn install --only=dev && yarn install && yarn run build"
-  }, 
-  "engines": {
-    "node": "10.16.1"
-}
+  }
 }
